# nextzip

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: BENCHMARK.md  BENCHMARK_RESULTS.md  COMMERCIAL_LICENSE.md  FORMAT.md  PROJECT_STATUS.md  RELEASE.md  UNIQUENESS_AND_USEFULNESS.md
scripts/: generate_corpus.py  run_benchmarks.py
src/: archive.rs  checksum.rs  cli.rs  detect.rs  header.rs  lib.rs  main.rs
src/bench/: compare.rs  mod.rs
src/codecs/: bitpack.rs  delta.rs  delta2.rs  dict.rs  frame_of_reference.rs  mod.rs  raw.rs  rle.rs  zigzag.rs
src/column/: decode.rs  encode.rs  mod.rs  payload.rs  planner.rs  stats.rs  types.rs
src/entropy/: zstd.rs
src/formats/: binary.rs  csv.rs  jsonl.rs  logs.rs  mod.rs  table.rs  tsv.rs
src/schema/: flatten.rs  infer.rs  mod.rs  types.rs
tests/: corrupt.rs  csv_dialect.rs  integration.rs  property.rs
