[package]
name = "nextzip"
version = "0.1.0-alpha"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"

[dependencies]
anyhow = "1"
bincode = "1"
blake3 = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
flate2 = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zstd = "0.13"

[dev-dependencies]
proptest = "1"
tempfile = "3"
